# sra_assistant_curator

./: .env.example  .gitignore  README.md  README_PRODUCTION_RERUN.md  environment.yml  pyproject.toml  requirements-ai.txt
configs/: default.yaml
data/: README_DATA.md  pmid_corrections.tsv  special_pmid_handling.tsv
docs/: ACTIVE_WORKFLOW_MAP.md  AGENTIC_AI_ASSIST.md  API_ASSIST_OPTIONAL_SETUP.md  BACKGROUND_CONTROL_MATCHING_CONTEXT.md  CHIP_AI_PHASE_COMPLETION_REPORT.md  CHIP_METADATA_INPUT_NOTE.md  CLEAN_RERUN_HANDOFF.md  CODEX_ASSIST.md  CURATOR_APP_SPEC.md  CURATOR_GUIDE.md  CURATOR_WORKFLOW.md  CURATOR_WORKFLOW_OVERVIEW.md  CURRENT_PIPELINE_STATUS_AND_STRATEGY.md  DEVELOPER_GUIDE.md  GOLDEN_OUTPUTS.md  HANDOFF_SUMMARY.md  LOCAL_INPUTS.md  MERGE_BACK_PLAN.md  OUTPUTS_GUIDE.md  PIPELINE_OVERVIEW.md  PIPELINE_READINESS_REPORT.md  POSTDOC_RERUN_RUNBOOK.md  PRODUCTION_REORG_PLAN.md  QUICKSTART.md  RERUN_VALIDATION.md  REVIEWER_GUIDE.md  SCRIPT_CLEANUP_INVENTORY.tsv  SCRIPT_CLEANUP_PLAN.md  TRUSTED_RNA_AI_PHASE_COMPLETION_REPORT.md  UNMAPPED_SCRIPT_REVIEW.md  UNMAPPED_SCRIPT_REVIEW.tsv  WORKFLOW.md
outputs/: README_OUTPUTS.md
papers/: README_PAPERS.md
scripts/: 00_audit_current_pipeline_for_reorg.py  01_define_active_workflow_and_outputs.py  01_filter_master_by_pmid.py  02_create_clean_final_release.py  02_fetch_sra_runinfo_for_master_rows.py  03_fetch_biosample_metadata_for_master_rows.py  03_qc_final_release.py  04_pipeline_readiness_report.py  04_populate_master_from_biosample.py  05_run_all_checks.py  06_list_pmid_candidates.py  06_rerun_readiness_check.py  (+67 more)
(+42 files in other folders)
